--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -4,10 +4,9 @@
     <div class="form">
         <div class="wrapper-form">
             <div class="text-form">
-                <h2 id="contacto">Contacto</h2>
-                <h3 class="text-title-form">UNA ATENCIÓN PERSONALIZADA</h3>
-                <p>Si deseas recibir más información sobre un área específica de nuestra formación
-                    puedes ponerte en contacto con nosotros a través del siguiente formulario.</p>
+                <h2 id="contacto">{{ 'frontend.title.contact'|trans|raw }}</h2>
+                <h3 class="text-title-form">{{ 'frontend.text.conctact_subtitle'|trans|raw }}</h3>
+                <p>{{ 'frontend.text.contact'|trans|raw }}</p>
             </div>
         </div>
         <div class="wrapper-map">
