--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -29,8 +29,10 @@
 </div>
 
 <header>
-    {% include ':desktop:_header_top.html.twig' %}
-    {% include ':desktop:_header_top_mobile.html.twig' %}
+    {% block menu %}
+        {% include ':desktop:_header_top.html.twig' %}
+        {% include ':desktop:_header_top_mobile.html.twig' %}
+    {% endblock %}
     <div class="header">
         <div class="wrapper-content">
             <div class="logo">
