--- a/app/Resources/views/desktop/_our_center.html.twig
+++ b/app/Resources/views/desktop/_our_center.html.twig
@@ -1,73 +1,58 @@
 <a name="nuestro-centro"></a>
 <div class="our_center">
     <div id="text">
-        <h2>Nuestro centro</h2>
+        <h2>{{ 'frontend.title.our_center'|trans|raw }}</h2>
         <h3>
-            Mas de 10 años sacando lo mejor de tu vocación
+            {{ 'frontend.text.our_center_subtitle'|trans|raw }}
         </h3>
         <p id="first-paragraph">
-            <strong>Elegir dónde y cómo comienza tu futuro es una de las decisiones más importantes de tu vida. En Escuela sboza2 tenemos
-            tres de los requisitos indispensables para que aciertes de lleno: un programa formativo inigualable, un equipo docente
-            seleccionado de entre los mejores y, sobre todo, años de grandes resultados.</strong>
+            <strong>{{ 'frontend.text.our_center_paragraph_1'|trans|raw }}</strong>
         </p>
         <p id="second-paragraph">
-            sboza2 es una escuela de arte, con centros en Jaén y Granada. Su objetivo es ofrecer la mejor formación en profesiones artísticas a
-            estudiantes interesados, proporcionándoles los mejores medios para formarse en áreas como animación 3D, diseño gráfico, cómic,
-            ilustración tradicional, arte digital, creación de videojuegos, fotografía, etc.
+            {{ 'frontend.text.our_center_paragraph_2'|trans|raw }}
         </p>
     </div>
     <div id="list">
-        <h3>MOTIVOS PARA ELEGIR sboza2</h3>
+        <h3>{{ 'frontend.text.subtitle_list'|trans|raw }}</h3>
         <ul>
             <li>
-                <strong>Equipo de formadores</strong> de reconocido recorrido profesional y experta capacidad docente, especializados en 3D, Ilustración,
-                Videojuegos, Diseño Gráfico, Animación, etc.
+                {{ 'frontend.text.element_list1'|trans|raw }}
             </li>
             <li>
-                Relación <strong>calidad-precio incuestionable</strong> y ventajosa para nuestr@s
-                alumn@s.
+                {{ 'frontend.text.element_list2'|trans|raw }}
             </li>
             <li>
-                <strong>Financiación</strong> de los cursos <strong>sin ningún cargo</strong> añadido.
+                {{ 'frontend.text.element_list3'|trans|raw }}
             </li>
             <li>
-                Intermediación y <strong>búsqueda activa de empleo</strong> para nuestr@s alumn@s.
-                Publicación de ofertas en nuestra Web.
+                {{ 'frontend.text.element_list4'|trans|raw }}
             </li>
             <li>
-                Contactos con empresas para <strong>trabajos en prácticas</strong>.
+                {{ 'frontend.text.element_list5'|trans|raw }}
             </li>
             <li>
-                <strong>Grupos reducidos</strong> de máximo 14 alumn@s por clase para garantizar el
-                seguimiento individual.
+                {{ 'frontend.text.element_list6'|trans|raw }}
             </li>
             <li>
-                <strong>Portfolio</strong> público de ARTENEO, donde se pueden ver los resultados de
-                nuestr@ alumn@s año tras año..
+                {{ 'frontend.text.element_list7'|trans|raw }}
             </li>
             <li>
-                Posibilidad de asistir a una <strong>Clase Demo</strong>, ocasión de probar antes de
-                elegir, sin ningún compromiso.
+                {{ 'frontend.text.element_list8'|trans|raw }}
             </li>
             <li>
-                Organización periódica de <strong>Talleres y Masterclasses, gratuitos</strong> para l@s
-                alumn@s de ARTENEO.
+                {{ 'frontend.text.element_list9'|trans|raw }}
             </li>
             <li>
-                <strong>Calendario lectivo</strong> oficial con recuperación de clase en caso de incidencia
-                responsabilidad de la Escuela.
+                {{ 'frontend.text.element_list10'|trans|raw }}
             </li>
             <li>
-                <strong>Control de calidad permanente</strong> a través de encuestas realizadas a l@s
-                alumn@s tanto presenciales como online.
+                {{ 'frontend.text.element_list11'|trans|raw }}
             </li>
             <li>
-                Todo el <strong>material</strong> necesario para el trabajo individual de l@s estudiantes
-                está <strong>incluido</strong>.
+                {{ 'frontend.text.element_list12'|trans|raw }}
             </li>
             <li>
-                Cursos <strong>Intensivos de verano</strong> como complemento adicional a la formación
-                o como ocasión para confirmar tu vocación profesional.
+                {{ 'frontend.text.element_list13'|trans|raw }}
             </li>
         </ul>
     </div>
