--- a/app/Resources/views/desktop/_our_cursos.html.twig
+++ b/app/Resources/views/desktop/_our_cursos.html.twig
@@ -1,73 +1,73 @@
 <a name="nuestros-cursos"></a>
 <div class="our_cursos">
-    <h3  class="title-section">Nuestros cursos</h3>
+    <h3  class="title-section">{{ 'frontend.title.our_curses'|trans|raw }}</h3>
     <div class="block-cursos">
         <div class="element-pink">
             <div class="head-course">
-                <img src="{{ asset('sboza2/img/icons/curso1.svg') }}" title="Cursos sboza2" alt="Formación Oficial">
-                <p class="text">Formación Oficial</p>
+                <img src="{{ asset('sboza2/img/icons/curso1.svg') }}" title="Cursos sboza2" alt="{{ 'frontend.text.formacion_oficial'|trans|raw }}">
+                <p class="text">{{ 'frontend.text.formacion_oficial'|trans|raw }}</p>
                 <p class="text-point">...</p>
             </div>
             <ul>
-                <li><p>diseño de productos gráficos<br><span>ARGG0110</span></p></li>
-                <li><p>ilustración<br><span>ARGG0212</span></p></li>
-                <li><p>desarrollo de productos editoriales multimedia<br><span>ARGN0110</span></p></li>
-                <li><p>desarrollo de productos audiovisuales multimedia interactivos<br><span>IMSV0209</span></p></li>
+                <li><p>{{ 'frontend.text.element_list_formacion_oficial_1'|trans|raw }}</p></li>
+                <li><p>{{ 'frontend.text.element_list_formacion_oficial_2'|trans|raw }}</p></li>
+                <li><p>{{ 'frontend.text.element_list_formacion_oficial_3'|trans|raw }}</p></li>
+                <li><p>{{ 'frontend.text.element_list_formacion_oficial_4'|trans|raw }}</p></li>
             </ul>
         </div>
         <div id="spacing"></div>
         <div class="element-green">
             <div class="head-course">
-                <img src="{{ asset('sboza2/img/icons/curso2.svg') }}" title="Cursos sboza2" alt="Master Profesionales">
-                <p class="text">Máster Profesionales</p>
+                <img src="{{ asset('sboza2/img/icons/curso2.svg') }}" title="Cursos sboza2" alt="{{ 'frontend.text.master_profesionales'|trans|raw }}">
+                <p class="text">{{ 'frontend.text.master_profesionales'|trans|raw }}</p>
                 <p class="text-point">...</p>
             </div>
             <ul>
-                <li>concept art, Zbrush y grafismo para videojuegos</li>
-                <li>infoarquitectura 3D e interiores</li>
-                <li>creación de portfolio</li>
-                <li>ilustración infantil</li>
+                <li>{{ 'frontend.text.element_list_master_profesionales_1'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_master_profesionales_2'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_master_profesionales_3'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_master_profesionales_4'|trans|raw }}</li>
             </ul>
         </div>
         <div id="spacing-block"></div>
         <div class="element-pink">
             <div class="head-course">
-                <img src="{{ asset('sboza2/img/icons/curso3.svg') }}" title="Cursos sboza2" alt="Curso Intesivo">
-                <p class="text">Curso Intensivo</p>
+                <img src="{{ asset('sboza2/img/icons/curso3.svg') }}" title="Cursos sboza2" alt="{{ 'frontend.text.curso_intensivo'|trans|raw }}">
+                <p class="text">{{ 'frontend.text.curso_intensivo'|trans|raw }}</p>
                 <p class="text-point">...</p>
             </div>
             <ul>
-                <li>ilustración digital con COREL PAINTER</li>
-                <li>ilustración digital</li>
-                <li>cómic</li>
-                <li>photoshop, illustrator ó indesign</li>
-                <li>diseño gráfico</li>
-                <li>wordpress</li>
-                <li>posicionamiento SEO, SEM, y Google Adwords</li>
-                <li>modelado 3D con Zbrush</li>
-                <li>creación de tipografía</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_1'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_2'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_3'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_4'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_5'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_6'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_7'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_8'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_curso_intensivo_9'|trans|raw }}</li>
             </ul>
         </div>
         <div id="spacing"></div>
         <div class="element-green">
             <div class="head-course">
-                <img src="{{ asset('sboza2/img/icons/curso4.svg') }}" title="Cursos sboza2" alt="Titulación Privada">
-                <p class="text">Titulación Privada</p>
+                <img src="{{ asset('sboza2/img/icons/curso4.svg') }}" title="Cursos sboza2" alt="{{ 'frontend.text.titulacion_privada'|trans|raw }}">
+                <p class="text">{{ 'frontend.text.titulacion_privada'|trans|raw }}</p>
                 <p class="text-point">...</p>
             </div>
             <ul>
-                <li>diseño gráfico y diseño web</li>
-                <li>superior de diseño gráfico</li>
-                <li>motion graphics</li>
-                <li>superior de programación web</li>
-                <li>ilustración editorial y digital</li>
-                <li>cómic</li>
-                <li>dibujo para tatuadores</li>
-                <li>ilustración los sábados</li>
-                <li>videojuegos para dispositivos moviles</li>
-                <li>grado profesional en ine de animacion 3D, ilustracion y videojuegos</li>
-                <li>superior de fotografía profesional</li>
-                <li>caracterización y FX</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_1'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_2'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_3'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_4'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_5'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_6'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_7'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_8'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_9'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_10'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_11'|trans|raw }}</li>
+                <li>{{ 'frontend.text.element_list_titulacion_privada_12'|trans|raw }}</li>
             </ul>
         </div>
     </div>
