--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,10 +12,11 @@
         <link href="{{ asset('sboza2/css/font-awesome.min.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/styles.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/responsive.css') }}" rel="stylesheet" />
+        <link href="{{ asset('sboza2/css/jquery.bxslider.css') }}" rel="stylesheet" />
         <script src="{{ asset('sboza2/js/jquery-3.1.0.min.js') }}"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="{{ asset('sboza2/js/jquery.bxslider.min.js') }}"></script>
-        <link href="{{ asset('sboza2/css/jquery.bxslider.css') }}" rel="stylesheet" />
+        <script src="{{ asset('sboza2/js/menu.js') }}"></script>
 
     </head>
     <body>
@@ -32,114 +33,12 @@
                     $('.bxslider').bxSlider();
                 });
             </script>
-            <script>
-                $(function(){
 
-                    $('a[href*=#]').click(function() {
-
-                        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
-                                && location.hostname == this.hostname) {
-
-                            var $target = $(this.hash);
-
-                            $target = $target.length && $target || $('[name=' + this.hash.slice(1) +']');
-
-                            if ($target.length) {
-
-                                var targetOffset = $target.offset().top-200;
-
-                                $('html,body').animate({scrollTop: targetOffset}, 1000);
-
-                                if (document.body.classList.contains('hamburgler-active')) {
-                                    closeNav();
-                                } else {
-                                    openNav();
-                                }
-
-                                return false;
-                            }
-
-                        }
-                    });
-
-                });
-
-                document.getElementById('hamburgler').addEventListener('click', checkNav);
-                window.addEventListener("keyup", function(e) {
-                    if (e.keyCode == 27) closeNav();
-                }, false);
-
-                function checkNav() {
-                    if (document.body.classList.contains('hamburgler-active')) {
-                        closeNav();
-                    } else {
-                        openNav();
-                    }
-                }
-
-                function closeNav() {
-                    document.body.classList.remove('hamburgler-active');
-                }
-
-                function openNav() {
-                    document.body.classList.add('hamburgler-active');
-                }
-            </script>
             <script>
                 if (screen.width<660){
                     $('#link-whatsapp-footer').attr('href','intent://send/669970256#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end')
                 }
             </script>
-
-            {#<script>
-                var boxMobilePhone = $(".box_phone_mobile");
-                var phoneMobile = $('#phone-mobile');
-                var active = false;
-                phoneMobile.on( "click", function(){
-                    if(active){
-                        $('.active-phone').css("display","none");
-                        boxMobilePhone.removeClass("active-phone");
-                        active = false;
-                        console.log(active);
-                    }else{
-                        boxMobilePhone.addClass("active-phone");
-                        boxMobilePhone.css("display","block");
-                        active = true;
-                    }
-                })
-
-                var boxMobileEmail = $(".box_email_mobile");
-                var EmailMobile = $('#email-mobile');
-                var active = false;
-                EmailMobile.on( "click", function(){
-                    if(active){
-                        $('.active-phone').css("display","none");
-                        boxMobileEmail.removeClass("active-phone");
-                        active = false;
-                        console.log(active);
-                    }else{
-                        boxMobileEmail.addClass("active-phone");
-                        boxMobileEmail.css("display","block");
-                        active = true;
-                    }
-                })
-
-                var boxMobileDate = $(".box_date_mobile");
-                var DateMobile = $('#date-mobile');
-                var active = false;
-                DateMobile.on( "click", function(){
-                    if(active){
-                        $('.active-phone').css("display","none");
-                        boxMobileDate.removeClass("active-phone");
-                        active = false;
-                        console.log(active);
-                    }else{
-                        boxMobileDate.addClass("active-phone");
-                        boxMobileDate.css("display","block");
-                        active = true;
-                    }
-                })
-            </script>#}
         {% endblock %}
     </body>
 </html>
