course ilustration digital and traditional added

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -195,20 +195,29 @@ body{
   }
 }
 
-.content{
-  background: #aa198d;
-  color: #fff;
+
+
+.content-courses{
+  background: #ffffff;
+  color: #000000;
 
   .slide_show{
-    max-width: 100%;
-    margin: 0 auto;
-    background: #741c70;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    ul{
-      list-style: none;
+     max-width: 80%;
+     margin: 0 auto;
+     padding-top: 30px;
+     padding-bottom: 30px;
+    .wrapper_content_slide_course{
+      width: 49%;
+      display: inline-block;
+      margin-left: 5px;
+      ul{
+        list-style: none;
+      }
     }
-  }
+
+
+
+   }
 
   .text-contact-now{
     text-align: center;
@@ -249,7 +258,6 @@ body{
         font-size: 54px;
       }
     }
-
   }
   .content-form{
     margin-top: 34px;
@@ -364,13 +372,187 @@ body{
             font-size: 13px;
           }
         }
-        
+
       }
     }
 
   }
 }
 
+.content{
+  background: #aa198d;
+  color: #fff;
+
+  .slide_show{
+    max-width: 100%;
+    margin: 0 auto;
+    background: #741c70;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    ul{
+      list-style: none;
+    }
+  }
+
+  .text-contact-now{
+    text-align: center;
+    margin-top: 34px;
+    img{
+      width: 27px;
+      padding-left: 10px;
+      vertical-align: middle;
+    }
+  }
+
+
+  .info-thank{
+    text-align: center;
+    font-family: "Bebas Neue", arial, sans-serif;
+    font-size: 47px;
+    height: 400px;
+  }
+  .logo-thanks{
+    i{
+      font-size: 71px;
+    }
+  }
+  .info{
+    text-align: center;
+    font-family: "Bebas Neue", arial, sans-serif;
+    padding-top: 30px;
+    h1{
+      font-size: 74px;
+      letter-spacing: 3px;
+    }
+
+    h3{
+      font-size: 51px;
+      line-height: 67px;
+      letter-spacing: 3px;
+      span{
+        font-size: 54px;
+      }
+    }
+  }
+  .content-form{
+    margin-top: 34px;
+    .form{
+      .header-form{
+        margin-top: 24px;
+        .wrapper-header-form{
+          width: 833px;
+          margin: 0 auto;
+          .element-first{
+            display: inline-block;
+            width: 67%;
+            .icon{
+              width: 7%;
+              display: inline-block;
+              vertical-align: top;
+              img{
+                width: 32px;
+              }
+            }
+            .text{
+              display: inline-block;
+              width: 76%;
+              a{
+                text-decoration: none;
+                color: #ffffff;
+              }
+            }
+
+          }
+          .element-second{
+            display: inline-block;
+            width: 30%;
+            vertical-align: top;
+            .icon{
+              width: 16%;
+              display: inline-block;
+              vertical-align: top;
+              img{
+                width: 32px;
+              }
+            }
+            .text{
+              display: inline-block;
+              width: 81%;
+              a{
+                text-decoration: none;
+                color: #ffffff;
+              }
+            }
+
+          }
+        }
+      }
+      .wrapper-form{
+        width: 633px;
+        margin: 0 auto;
+        padding-bottom: 37px;
+        form{
+          margin-top: 70px;
+        }
+        .text-form{
+          text-align: center;
+          h2{
+            color: #999999;
+            letter-spacing: 10px;
+            text-transform: uppercase;
+          }
+          .text-title-form{
+            font-family: "Bebas Neue", arial, sans-serif;
+            font-size: 44px;
+            letter-spacing: 3px;
+            height: 100%;
+          }
+        }
+        .form-fields{
+          padding: 5px;
+          .field{
+            width: 64%;
+            display: inline-block;
+            .form-button{
+              border-radius: 5px 5px 5px 5px;
+              -moz-border-radius: 5px 5px 5px 5px;
+              -webkit-border-radius: 5px 5px 5px 5px;
+              border: none;
+              color: #aa198d;
+              background: #fff;
+              padding: 5px 55px;
+            }
+            input{
+              width: 100%;
+              -webkit-border-radius: 3px;
+              -moz-border-radius: 3px;
+              border-radius: 3px;
+              border: none;
+            }
+            textarea{
+              width: 99%;
+              -webkit-border-radius: 3px;
+              -moz-border-radius: 3px;
+              border-radius: 3px;
+            }
+            select{
+              width: 100%;
+            }
+          }
+          .label{
+            width: 35%;
+            display: inline-block;
+            vertical-align: top;
+            text-transform: uppercase;
+            font-size: 13px;
+          }
+        }
+
+      }
+    }
+
+  }
+}
 
 .footer{
   width: 100%;
