--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,6 +34,16 @@
                         pager: false,
                         auto: true
                     })
+
+                    $('.bxslider1').bxSlider({
+                        pager: false,
+                        auto: true
+                    })
+
+                    $('.bxslider2').bxSlider({
+                        pager: false,
+                        auto: true
+                    })
                 });
             </script>
             <script>
