--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -1,7 +1,9 @@
 {% form_theme form ':form:form_theme.html.twig' %}
 
 <div class="content-form">
-
+    <div class="text-contact-now">
+        <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><a href="tel:+34669970256"><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"></a><a id="link-whatsapp"><img src="{{ asset('sboza2/img/icons/Icono 2-06.svg') }}"></a>
+    </div>
     <div class="form">
         <div class="wrapper-form">
             <div class="text-form">
